--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -92,8 +92,9 @@ jobs:
             -   uses: actions/checkout@v3
             -   uses: actions/setup-java@v3
                 with:
-                    distribution: 'zulu'
                     java-version: '17'
+                    distribution: 'adopt'
+                    architecture: x64
 
             -   name: "Setup Gradle"
                 uses: gradle/gradle-build-action@v2
