--- a/.github/workflows/nightly_deploy.yml
+++ b/.github/workflows/nightly_deploy.yml
@@ -51,6 +51,12 @@ jobs:
         runs-on: ubuntu-22.04
         steps:
             -   uses: actions/checkout@v3
+            -   uses: actions/setup-java@v3
+                with:
+                    java-version: '17'
+                    distribution: 'adopt'
+                    architecture: x64
+
             -   name: "Setup Gradle"
                 uses: gradle/gradle-build-action@v2
 
