--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -37,7 +37,7 @@ jobs:
             -   name: Build with Gradle
                 uses: gradle/gradle-build-action@v2.5.1
                 with:
-                    arguments: android:bundleRelease
+                    arguments: androidApp:bundleRelease
 
             -   uses: r0adkll/sign-android-release@v1
                 name: "Sign app aab file"
