--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -50,11 +50,16 @@ jobs:
         runs-on: ubuntu-22.04
         steps:
             -   uses: actions/checkout@v3
-            -   name: "Setup Gradle"
-                uses: gradle/gradle-build-action@v2
+            -   uses: actions/setup-java@v3
+                with:
+                    java-version: '17'
+                    distribution: 'adopt'
+                    architecture: x64
 
-            -   name: "Build bundle release"
-                run: gradle android:bundleRelease
+            -   name: Build with Gradle
+                uses: gradle/gradle-build-action@v2.5.1
+                with:
+                    arguments: androidApp:bundleRelease
 
             -   uses: r0adkll/sign-android-release@v1
                 name: "Sign app aab file"
@@ -92,24 +97,17 @@ jobs:
             -   uses: actions/checkout@v3
             -   uses: actions/setup-java@v3
                 with:
-                    distribution: 'zulu'
                     java-version: '17'
+                    distribution: 'adopt'
+                    architecture: x64
 
-            -   name: "Setup Gradle"
-                uses: gradle/gradle-build-action@v2
-
-            -   name: "Build xcworkspace"
-                run: ./gradlew podInstall
-
-            -   name: "Setup app version"
-                uses: yanamura/ios-bump-version@v1
+            -   name: Build pod install
+                uses: gradle/gradle-build-action@v2.5.1
                 with:
-                    version: ${{ env.MIXDRINKS_MOBILE_APP_VERSION_NAME }}
-                    build-number: ${{ env.MIXDRINKS_MOBILE_APP_VERSION_CODE }}
-                    project-path: iosApp
+                    arguments: podInstall
 
             -   name: "Build IOS App"
-                uses: yukiarrr/ios-build-action@v1.9.1
+                uses: yukiarrr/ios-build-action@v1.11.0
                 with:
                     project-path: iosApp/iosApp.xcodeproj
                     p12-base64: ${{ secrets.MIXDRINKS_IOS_P12_BASE64 }}
