--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -67,8 +67,8 @@ jobs:
 
             -   name: Apply versions
                 run: |
-                    /usr/libexec/Plistbuddy -c "Set CFBundleVersion $MIXDRINKS_MOBILE_APP_VERSION_CODE" iosApp/Info.plist
-                    /usr/libexec/Plistbuddy -c "Set CFBundleShortVersionString $MIXDRINKS_MOBILE_APP_VERSION_NAME" iosApp/Info.plist
+                    /usr/libexec/Plistbuddy -c "Set CFBundleVersion $MIXDRINKS_MOBILE_APP_VERSION_CODE" iosApp/iosApp/Info.plist
+                    /usr/libexec/Plistbuddy -c "Set CFBundleShortVersionString $MIXDRINKS_MOBILE_APP_VERSION_NAME" iosApp/iosApp/Info.plist
 
             -   uses: actions/setup-java@v3
                 with:
