--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -92,9 +92,17 @@ jobs:
         env:
             MIXDRINKS_MOBILE_APP_VERSION_NAME: ${{ needs.prepare_deploy.outputs.output_write_mix_drinks_mobile_version_name }}
             MIXDRINKS_MOBILE_APP_VERSION_CODE: ${{ needs.prepare_deploy.outputs.output_write_mix_drinks_mobile_version_code }}
-        runs-on: macos-12
+        runs-on: macos-13
         steps:
             -   uses: actions/checkout@v3
+            -   name: Set XCode Version
+                run: sudo xcode-select -s /Applications/Xcode_15.0.app
+            -   name: Install Dependencies
+                run: |
+                    cd iosApp
+                    pod install --repo-update
+                    cd ..
+                shell: bash
             -   name: Apply versions
                 run: |
                     /usr/libexec/Plistbuddy -c "Set CFBundleVersion $MIXDRINKS_MOBILE_APP_VERSION_CODE" iosApp/iosApp/Info.plist
